--- a/css/_social-card-header.scss
+++ b/css/_social-card-header.scss
@@ -1,19 +1,6 @@
 .header-wrapper {
   gap: var(--gap-large);
 
-  .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    clip-path: inset(50%);
-    white-space: nowrap;
-    border: 0;
-  }
-
   .social-card-image {
     width: 88px;
     height: 88px;
